added list of files instead of single file