@@ -8,7 +8,7 @@ public class Main {
 
     public static void main(String[] args) {
         final String homePath="/home/user/Downloads/";
-        final List<String> fileNamesToCheck = Arrays.asList("file-sample_100kB.doc");
+        final List<String> fileNamesToCheck = List.of("file-sample_100kB.doc");
         final List<String> searchWords = Arrays.asList("vehicula","Java","jAva","Vestibulum");
         ReadWordFile read = new ReadWordFile();
         for(String fileName: fileNamesToCheck){
